--- a/src/components/navigation/DesktopNav.astro
+++ b/src/components/navigation/DesktopNav.astro
@@ -5,9 +5,10 @@ import Logo from "@/components/global/Logo.astro";
 ---
 
 <div
-  class="z-50 hidden bg-[#f5f5f9] lg:flex md:w-64 md:flex-col md:fixed md:inset-y-0"
-  @click="open = !open">
-  <div class="flex flex-col flex-1 relative min-h-0 bg-[#f5f5f9]">
+  class="z-50 hidden bg-base-50] lg:flex md:w-64 md:flex-col md:fixed md:inset-y-0"
+  @click="open = !open"
+>
+  <div class="flex flex-col flex-1 relative min-h-0 bg-base-50]">
     <div class="flex flex-col flex-1 pt-4 overflow-y-auto">
       <div class="flex items-center flex-shrink-0 pl-8 text-black">
         <Logo />
