--- a/src/components/navigation/NavigationLinks.astro
+++ b/src/components/navigation/NavigationLinks.astro
@@ -10,6 +10,10 @@ const navigationItems = [
     title: "Navigation",
     items: [
       {
+        href: "https://buy.polar.sh/polar_cl_qA3TQpjAlNypYhyG8xrP-Zd5QfivKRd00udeUBvE_HE",
+        text: "buy Trendspotter",
+      },
+      {
         href: "/tools/home",
         text: "Tools",
       },
@@ -30,14 +34,6 @@ const navigationItems = [
         href: "/pricing",
         text: "Advertise",
       },
-      {
-        href: "/forms/signin",
-        text: "Sign in",
-      },
-      {
-        href: "/forms/signup",
-        text: "sign up",
-      },
     ],
   },
   {
@@ -52,7 +48,7 @@ const navigationItems = [
         text: "Links",
       },
       {
-        href: "/system/buttons",
+        href: "/system/colors",
         text: "Colors",
       },
       {
@@ -77,20 +73,24 @@ const navigationItems = [
     >
       Categories
     </Text>
-    {
-      tags.map((tag) => (
-        <Link
-          size="sm"
-          variant="link"
-          title={tag}
-          aria-label={tag}
-          href={`/tools/tags/${tag}`}
-          class="flex font-mono uppercase font-medium  "
-        >
-          {tag}
-        </Link>
-      ))
-    }
+    <ul class="space-y-1" role="navigation">
+      {
+        tags.map((tag) => (
+          <li>
+            <Link
+              size="sm"
+              variant="link"
+              title={tag}
+              aria-label={tag}
+              href={`/tools/tags/${tag}`}
+              class="text-sm font-mono uppercase font-medium  text-base-500 hover:text-accent-500"
+            >
+              {tag}
+            </Link>
+          </li>
+        ))
+      }
+    </ul>
   </div>
   {
     navigationItems.map((section) => (
@@ -102,15 +102,19 @@ const navigationItems = [
         >
           {section.title}
         </Text>
-        {section.items.map((item) => (
-          <Link
-            variant="link"
-            href={item.href}
-            class="flex items-center font-mono uppercase text-sm font-medium"
-          >
-            {item.text}
-          </Link>
-        ))}
+        <ul class="space-y-1" role="navigation">
+          {section.items.map((item) => (
+            <li>
+              <Link
+                variant="link"
+                href={item.href}
+                class="text-sm font-mono uppercase font-medium  text-base-500 hover:text-accent-500"
+              >
+                {item.text}
+              </Link>
+            </li>
+          ))}
+        </ul>
       </div>
     ))
   }
