--- a/src/components/navigation/SidebarButton.astro
+++ b/src/components/navigation/SidebarButton.astro
@@ -2,12 +2,17 @@
 import Link from "../fundations/components/Link.astro";
 ---
 
-<div class=" p-8 items-center">
+<div class="p-8 items-center flex w-full flwx-row gap-2">
+  <Link
+    size="sm"
+    variant="muted"
+    class="w-full justify-center"
+    href="/forms/signin">Sign in</Link
+  >
   <Link
     size="sm"
     variant="default"
     class="w-full justify-center"
-    href="/#"
-    >Buy Trendspotter</Link
+    href="/forms/signup">Sign ip</Link
   >
 </div>
