--- a/src/components/tools/AllTools.astro
+++ b/src/components/tools/AllTools.astro
@@ -9,10 +9,10 @@ import Link from "@/components/fundations/components/Link.astro";
   variant="link"
   href={url}
   title={title}
-  class="relative flex items-center gap-x-3 rounded-2xl bg-white p-4 focus-outline-none"
+  class="relative flex items-center gap-x-3 rounded-2xl bg-base-100 p-4 focus-outline-none"
 >
   <div
-    class="flex-shrink-0 p-1 size-16 bg-base-100 rounded-xl items-center flex justify-center"
+    class="flex-shrink-0 p-1 size-16 bg-white rounded-xl items-center flex justify-center"
   >
     <img alt={title} src={image} class="size-10" />
   </div>
