--- a/src/components/fundations/components/Button.astro
+++ b/src/components/fundations/components/Button.astro
@@ -39,7 +39,7 @@ const xl = ["h-14", "px-6", "py-3", "text-lg", "font-medium"];
 // Gap
 const gapXS = ["gap-2"];
 const gapSM = ["gap-4"];
-const gapneutral = ["gap-8"];
+const baseGap = ["gap-8"];
 const gapMD = ["gap-10"];
 const gapLG = ["gap-12"];
 const additionalClasses = className ? className.split(" ") : [];
@@ -68,7 +68,7 @@ const additionalClasses = className ? className.split(" ") : [];
     size === "xl" && xl,
     gap === "xs" && gapXS,
     gap === "sm" && gapSM,
-    gap === "base" && base,
+    gap === "base" && baseGap,
     gap === "md" && gapMD,
     gap === "lg" && gapLG,
     ...additionalClasses,
