--- a/src/components/system/Colors.astro
+++ b/src/components/system/Colors.astro
@@ -51,8 +51,12 @@ const baseColor = [
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
       <!-- Accent Color Column -->
       <div>
-        <h3 class="text-base font-semibold leading-6 text-base-500">accent</h3>
-
+        <Text
+          tag="h3"
+          variant="textSM"
+          class="text-base-900 font-mono uppercase font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
+          >Accent</Text
+        >
         <div class="mt-6 flex flex-col gap-2">
           {
             accentColor.map((shade) => (
@@ -66,16 +70,21 @@ const baseColor = [
           }
         </div>
       </div>
-
       <!-- Base Color Column -->
       <div>
-        <h3 class="text-base font-semibold leading-6 text-base-500">base</h3>
-
+        <Text
+          tag="h3"
+          variant="textSM"
+          class="text-base-900 font-mono uppercase font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
+          >Base</Text
+        >
         <div class="mt-6 flex flex-col gap-2">
           {
             baseColor.map((shade) => (
               <div class="inline-flex items-center gap-2">
-                <div class={`p-6 rounded-lg bg-base-${shade}`} />
+                <div
+                  class={`p-6 rounded-lg border border-base-200 bg-base-${shade}`}
+                />
                 <Text tag="span" variant="textSM" class="text-base-500 text-sm">
                   bg-base-{shade}
                 </Text>
