--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,22 +6,19 @@ import DesktopNav from "@/components/navigation/DesktopNav.astro";
 import "@/styles/global.css";
 ---
 
-<html
-  lang="en"
-  class="scroll-smooth">
+<html lang="en" class="scroll-smooth">
   <head>
     <BaseHead />
   </head>
-  <body class="bg-[#f5f5f9]">
+  <body class="bg-base-50">
     <div class="min-h-[640px] flex flex-col">
-      <div
-        x-data="{ open: false }"
-        @keydown.window.escape="open = false">
+      <div x-data="{ open: false }" @keydown.window.escape="open = false">
         <!-- Static sidebar for desktop -->
         <DesktopNav />
         <div class="relative z-0 flex flex-1 overflow-hidden">
           <div
-            class="relative z-0 flex-1 overflow-y-auto focus:outline-none lg:pl-64 2xl:pl-0">
+            class="relative z-0 flex-1 overflow-y-auto focus:outline-none lg:pl-64 2xl:pl-0"
+          >
             <MobileNav />
             <!-- Start main area-->
             <div class="flex-1 mx-auto min-h-svh flex flex-col">
