--- a/src/components/navigation/NavigationLinks.astro
+++ b/src/components/navigation/NavigationLinks.astro
@@ -64,7 +64,7 @@ const navigationItems = [
 ];
 ---
 
-<div class="flex flex-col gap-12 2xl:py-12">
+<div class="flex flex-col gap-6 lg:gap-12 2xl:py-12">
   <div class="px-8 space-y-2">
     <Text
       tag="p"
