--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,10 +31,7 @@ import { AstroSeo } from "@astrolib/seo";
   }}
 />
 <meta charset="UTF-8" />
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1.0"
-/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- Basic Meta Tags -->
 <title>Your Website Title</title>
@@ -42,75 +39,27 @@ import { AstroSeo } from "@astrolib/seo";
   name="description"
   content="A brief description of your website content."
 />
-<meta
-  name="keywords"
-  content="keyword1, keyword2, keyword3"
-/>
-<meta
-  name="author"
-  content="Your Name or Company Name"
-/>
+<meta name="keywords" content="keyword1, keyword2, keyword3" />
+<meta name="author" content="Your Name or Company Name" />
 
 <!-- Favicons -->
-<link
-  rel="icon"
-  href="/favicon.ico"
-  sizes="any"
-/>
-<link
-  rel="icon"
-  href="/icon.svg"
-  type="image/svg+xml"
-/>
-<link
-  rel="apple-touch-icon"
-  href="/apple-touch-icon.png"
-/>
-<link
-  rel="manifest"
-  href="/manifest.webmanifest"
-/>
+<link rel="icon" href="/favicon.ico" sizes="any" />
+<link rel="icon" href="/icon.svg" type="image/svg+xml" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/manifest.webmanifest" />
 
 <!-- Favicon for IE -->
-<link
-  rel="shortcut icon"
-  href="/favicon.ico"
-  type="image/x-icon"
-/>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 <!-- Favicons for different sizes -->
-<link
-  rel="icon"
-  type="image/png"
-  sizes="16x16"
-  href="/favicon-16x16.png"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  sizes="32x32"
-  href="/favicon-32x32.png"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  sizes="48x48"
-  href="/favicon-48x48.png"
-/>
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
 
 <!-- Open Graph / Facebook -->
-<meta
-  property="og:type"
-  content="website"
-/>
-<meta
-  property="og:url"
-  content="https://www.yourwebsite.com/"
-/>
-<meta
-  property="og:title"
-  content="Your Website Title"
-/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.yourwebsite.com/" />
+<meta property="og:title" content="Your Website Title" />
 <meta
   property="og:description"
   content="A brief description of your website content."
@@ -121,18 +70,9 @@ import { AstroSeo } from "@astrolib/seo";
 />
 
 <!-- Twitter -->
-<meta
-  property="twitter:card"
-  content="summary_large_image"
-/>
-<meta
-  property="twitter:url"
-  content="https://www.yourwebsite.com/"
-/>
-<meta
-  property="twitter:title"
-  content="Your Website Title"
-/>
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://www.yourwebsite.com/" />
+<meta property="twitter:title" content="Your Website Title" />
 <meta
   property="twitter:description"
   content="A brief description of your website content."
@@ -143,45 +83,22 @@ import { AstroSeo } from "@astrolib/seo";
 />
 
 <!-- Canonical URL -->
-<link
-  rel="canonical"
-  href="https://www.yourwebsite.com/"
-/>
+<link rel="canonical" href="https://www.yourwebsite.com/" />
 
 <!-- Additional SEO -->
-<meta
-  name="robots"
-  content="index, follow"
-/>
-<meta
-  name="googlebot"
-  content="index, follow"
-/>
+<meta name="robots" content="index, follow" />
+<meta name="googlebot" content="index, follow" />
 
 <!-- Apple Touch Icon (already included in favicons, but keeping for backwards compatibility) -->
-<link
-  rel="apple-touch-icon"
-  sizes="180x180"
-  href="/apple-touch-icon.png"
-/>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
 <!-- Theme Color for Mobile Browsers -->
-<meta
-  name="theme-color"
-  content="#ffffff"
-/>
+<meta name="theme-color" content="#ffffff" />
 
 <!-- For IE -->
-<meta
-  http-equiv="X-UA-Compatible"
-  content="IE=edge"
-/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <!--- Alpine JS CDN -->
-<script
-  defer
-  src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
-></script>
-
+<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
 <!-- 
 // Geist font family Font CDN  using coolLabs fonts
@@ -190,7 +107,9 @@ import { AstroSeo } from "@astrolib/seo";
 // https://fonts.coollabs.io/
 -->
 
-<!-- Preconnect to coolLabs Fonts -->
-<link rel="preconnect" href="https://api.fonts.coollabs.io" crossorigin>
-<!-- Link to Geist and Geist Mono fonts -->
-<link href="https://api.fonts.coollabs.io/css2?family=Geist:wght@100..900&family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap"
+  rel="stylesheet"
+/>
