--- a/src/components/forms/SubmitModal.astro
+++ b/src/components/forms/SubmitModal.astro
@@ -96,7 +96,7 @@ import Button from "@/components/fundations/components/Button.astro";
               />
             </div>
             <div>
-              <label for="tool-url"  > Tool URL </label>
+              <label for="tool-url" class="sr-only"> Tool URL </label>
               <input
                 id="tool-url"
                 name="url"
