--- a/src/components/navigation/SidebarButton.astro
+++ b/src/components/navigation/SidebarButton.astro
@@ -11,8 +11,8 @@ import Link from "../fundations/components/Link.astro";
   >
   <Link
     size="sm"
-    variant="default"
+    variant="accent"
     class="w-full justify-center"
-    href="/forms/signup">Sign ip</Link
+    href="/forms/signup">Sign up</Link
   >
 </div>
