--- a/src/components/navigation/DesktopNav.astro
+++ b/src/components/navigation/DesktopNav.astro
@@ -5,17 +5,16 @@ import Logo from "@/components/global/Logo.astro";
 ---
 
 <div
-  class="z-50 hidden bg-base-50] lg:flex md:w-64 md:flex-col md:fixed md:inset-y-0"
+  class="z-50 hidden lg:flex md:w-64 2xl:w-72 md:flex-col md:fixed md:inset-y-0 m-2"
   @click="open = !open"
 >
-  <div class="flex flex-col flex-1 relative min-h-0 bg-base-50]">
-    <div class="flex flex-col flex-1 pt-4 overflow-y-auto">
+  <div class="flex flex-col flex-1 relative min-h-0 bg-base-100 rounded-3xl">
+    <div class="flex flex-col flex-1 pt-8 overflow-y-auto">
       <div class="flex items-center flex-shrink-0 pl-8 text-black">
         <Logo />
       </div>
       <nav class="flex-1 mt-4"><NavigationLinks /></nav>
     </div>
-
     <SidebarButton />
   </div>
 </div>
