--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,9 @@ import "@/styles/global.css";
       <div x-data="{ open: false }" @keydown.window.escape="open = false">
         <!-- Static sidebar for desktop -->
         <DesktopNav />
-        <div class="relative z-0 flex flex-1 overflow-hidden">
+        <div
+          class="relative z-0 flex flex-1 overflow-hidden "
+        >
           <div
             class="relative z-0 flex-1 overflow-y-auto focus:outline-none lg:pl-64 2xl:pl-0"
           >
