--- a/src/components/navigation/SidebarButton.astro
+++ b/src/components/navigation/SidebarButton.astro
@@ -2,7 +2,7 @@
 import Link from "../fundations/components/Link.astro";
 ---
 
-<div class="p-8 items-center flex w-full flwx-row gap-2">
+<div class="p-6 items-center flex w-full flex-col gap-2">
   <Link
     size="sm"
     variant="muted"
