--- a/src/components/navigation/NavigationLinks.astro
+++ b/src/components/navigation/NavigationLinks.astro
@@ -42,7 +42,7 @@ const navigationItems = [
         text: "Overview",
       },
       {
-        href: "/system/buttons",
+        href: "/system/links",
         text: "Links",
       },
       {
@@ -65,7 +65,7 @@ const navigationItems = [
 <div class="flex flex-col gap-6 lg:gap-12 py-6 2xl:py-12">
   {
     navigationItems.map((section) => (
-      <div class="px-8 space-y-2 ">
+      <div class="px-6 space-y-2 ">
         <Text
           tag="p"
           variant="textMD"
@@ -79,7 +79,7 @@ const navigationItems = [
               <Link
                 variant="link"
                 href={item.href}
-                class="text-sm font-mono uppercase font-medium  text-base-500 hover:text-accent-500"
+                class="text-sm font-mono uppercase font-medium  text-base-600 hover:text-accent-500"
               >
                 {item.text}
               </Link>
