--- a/src/components/system/Links.astro
+++ b/src/components/system/Links.astro
@@ -3,6 +3,7 @@ import Link from "@/components/fundations/components/Link.astro";
 import Text from "@/components/fundations/elements/Text.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 ---
+
 <section>
   <Wrapper variant="hero">
     <Text
@@ -73,7 +74,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         <Link
           href="#_"
           variant="link"
-          class="font-medium texrt-base-500 hover:text-accent-500"
+          class="font-medium text-base-500 hover:text-accent-500"
           >Unstyled XS</Link
         >
       </div>
