--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -113,3 +113,8 @@ import { AstroSeo } from "@astrolib/seo";
   href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap"
   rel="stylesheet"
 />
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Sora:wght@100..800&display=swap"
+  rel="stylesheet"
+/>
