--- a/src/components/blog/Insights.astro
+++ b/src/components/blog/Insights.astro
@@ -15,10 +15,7 @@ const { title, url, description, pubDate, image } = Astro.props;
     <Text tag="p" variant="textXS" class="mt-4 text-base-400"
       ><time datetime="2020-03-16"> {pubDate}</time></Text
     >
-    <Text
-      tag="h3"
-      variant="textMD"
-      class="font-medium text-base-900 font-mono uppercase text-balance"
+    <Text tag="h3" variant="textMD" class="font-medium text-base-900"
       >{title}</Text
     >
     <Text tag="p" variant="textSM" class="text-base-500 mt-2 line-clamp-2"
