--- a/src/components/fundations/components/Button.astro
+++ b/src/components/fundations/components/Button.astro
@@ -55,7 +55,7 @@ const additionalClasses = className ? className.split(" ") : [];
     "duration-200",
     "focus:ring-2",
     "focus:ring-offset-2",
-    "transition-shadow",
+    "transition",
     "focus:outline-none",
     variant === "default" && defaultClass,
     variant === "accent" && accentClass,
