--- a/src/components/global/Logo.astro
+++ b/src/components/global/Logo.astro
@@ -6,7 +6,7 @@ import Text from "@/components/fundations/elements/Text.astro";
   tag="a"
   href="/"
   variant="textBase"
-  class="inline-flex items-center uppercase font-bold text-base-1300 gap-3 group-hover:opacity-80"
+  class="inline-flex items-center font-bold text-base-1300 gap-3 group-hover:opacity-80"
 >
   <svg
     class="size-4"
