--- a/src/components/navigation/MobileTopBar.astro
+++ b/src/components/navigation/MobileTopBar.astro
@@ -8,29 +8,32 @@ import Button from "@/components/fundations/components/Button.astro";
 >
   <div class="flex flex-row items-center justify-between w-full">
     <Logo />
-
     <Button
       size="sm"
       variant="muted"
       type="button"
-      class="ml-auto w-9 inline-flex items-center justify-center rounded-md hover:text-accent-400 focus:outline-none focus:text-black focus:ring-inset"
+      class="ml-auto w-9 inline-flex items-center justify-center group"
       @click="open = true"
     >
-      <span class="sr-only">Open sidebar</span>
-      <svg
-        class="size-6 shrink-0"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-        aria-hidden="true"
+      <div
+        class="p-1.5 group-focus-visible:ring group-focus-visible:ring-indigo-300"
       >
-        <path
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="fill-gray-400 size-6 shrink-0 transition duration-300 ease-in-out"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
-          stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16"></path>
-      </svg>
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path :class="{'opacity-0': open}" d="M4 8l16 0" class="opacity-0"
+          ></path>
+          <path d="M4 16l16 0"></path></svg
+        >
+      </div>
     </Button>
   </div>
 </div>
