--- a/src/components/navigation/NavigationLinks.astro
+++ b/src/components/navigation/NavigationLinks.astro
@@ -9,7 +9,7 @@ const navigationItems = [
     items: [
       {
         href: "https://buy.polar.sh/polar_cl_qA3TQpjAlNypYhyG8xrP-Zd5QfivKRd00udeUBvE_HE",
-        text: "buy Trendspotter",
+        text: "Buy Trendspotter",
       },
       {
         href: "/tools/home",
@@ -66,11 +66,7 @@ const navigationItems = [
   {
     navigationItems.map((section) => (
       <div class="px-6 space-y-2 ">
-        <Text
-          tag="p"
-          variant="textMD"
-          class=" font-semibold font-mono uppercase text-black"
-        >
+        <Text tag="p" variant="textMD" class=" font-semibold        text-black">
           {section.title}
         </Text>
         <ul class="space-y-1" role="navigation">
@@ -79,7 +75,7 @@ const navigationItems = [
               <Link
                 variant="link"
                 href={item.href}
-                class="text-sm font-mono uppercase font-medium  text-base-600 hover:text-accent-500"
+                class="text-sm        font-medium  text-base-600 hover:text-accent-500"
               >
                 {item.text}
               </Link>
