--- a/src/components/pricing/Newsletter.astro
+++ b/src/components/pricing/Newsletter.astro
@@ -2,13 +2,14 @@
 import Text from "../fundations/elements/Text.astro";
 import Button from "../fundations/components/Button.astro";
 ---
+
 <div class="flex flex-col h-full justify-between p-8 bg-base-50 rounded-3xl">
   <div>
     <div>
       <Text
         tag="p"
         variant="textLG"
-        class="text-xl text-base-900 font-semibold uppercase"
+        class="text-xl text-base-900 font-semibold"
       >
         Newsletter
       </Text>
@@ -48,10 +49,7 @@ import Button from "../fundations/components/Button.astro";
         </Button>
       </div>
       <div class="mt-8">
-        <Text
-          variant="textXS"
-          class="text-base-900 font-mono uppercase tracking-wide font-medium"
-        >
+        <Text variant="textXS" class="text-base-900 tracking-wide font-medium">
           includes:
         </Text>
         <ul
