--- a/src/components/store/StoreEntries.astro
+++ b/src/components/store/StoreEntries.astro
@@ -22,7 +22,7 @@ import Link from "@/components/fundations/components/Link.astro";
     <Text
       tag="h3"
       variant="textMD"
-      class="font-medium text-base-900 font-mono uppercase justify-between flex flex-row w-full"
+      class="font-medium text-base-900 justify-between flex flex-row w-full"
     >
       <span>{title}</span>
 
