--- a/src/layouts/InfoPagesLayout.astro
+++ b/src/layouts/InfoPagesLayout.astro
@@ -11,7 +11,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       <Text
         tag="h1"
         variant="textXL"
-        class="text-base-900 mt-4 lg:text-balance tracking-tighter 2xl:text-3xl"
+        class="text-base-900 mt-4 lg:text-balance 2xl:text-3xl"
       >
         {frontmatter.page}
       </Text>
