--- a/src/layouts/StoreLayout.astro
+++ b/src/layouts/StoreLayout.astro
@@ -18,7 +18,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
           <Text
             tag="h1"
             variant="displaySM"
-            class="text-base-900 tracking-tighter 2xl:text-5xl font-mono uppercase font-medium"
+            class="text-base-900 2xl:text-5xl font-medium"
             >{frontmatter.title}</Text
           >
           <Text
