--- a/src/layouts/ToolsLayout.astro
+++ b/src/layouts/ToolsLayout.astro
@@ -11,13 +11,15 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
     <Wrapper variant="hero">
       <div>
         {
-          frontmatter.images.slice(0, 1).map((image) => (
-            <img
-              class="border border-base-200        rounded-xl max-h-96 object-cover object-top size-full "
-              src={image.url}
-              alt={image.alt}
-            />
-          ))
+          frontmatter.images
+            .slice(0, 1)
+            .map((image) => (
+              <img
+                class="border border-base-200        rounded-xl max-h-96 object-cover object-top size-full "
+                src={image.url}
+                alt={image.alt}
+              />
+            ))
         }
       </div>
       <dl class="relative grid grid-cols-2 gap-y-4 md:grid-cols-4 mt-12 w-full">
@@ -28,15 +30,13 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
                 <Text
                   tag="p"
                   variant="textMD"
-                  class="text-base-900      font-medium font-mono uppercase">
+                  class="text-base-900      font-medium       "
+                >
                   {details.label}
                 </Text>
               </dt>
               <dd class=" mt-2 ">
-                <Text
-                  tag="p"
-                  variant="textMD"
-                  class=" text-base-500   ">
+                <Text tag="p" variant="textMD" class=" text-base-500   ">
                   {details.value}
                 </Text>
               </dd>
@@ -45,19 +45,15 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         }
       </dl>
       <div class="min-w-0 flex-1 mt-12">
-        <Text
-          tag="h1"
-          variant="textBase"
-          class="text-base-900 font-mono uppercase font-medium tracking-tighter      "
+        <Text tag="h1" variant="textBase" class="text-base-900 font-medium"
           >{frontmatter.title}</Text
         >
         <Text
           tag="p"
           variant="textXL"
-          class="mt-4 text-base-500 text-balance    2xl:text-3xl"
+          class="mt-4 text-base-500 text-balance 2xl:text-3xl"
           >{frontmatter.tagline} - {frontmatter.description}</Text
         >
-       
       </div>
 
       <div class="flex mt-4">
@@ -66,7 +62,8 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
           variant="muted"
           href={frontmatter.live}
           title={frontmatter.title}
-          class="justify-center flex items-center gap-1 w-auto">
+          class="justify-center flex items-center gap-1 w-auto"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -76,11 +73,8 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
             stroke-linecap="round"
             stroke-linejoin="round"
             class="icon icon-tabler icons-tabler-outline icon-tabler-link size-4"
-            ><path
-              stroke="none"
-              d="M0 0h24v24H0z"
-              fill="none"
-            ></path><path d="M9 15l6 -6"></path><path
+            ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+              d="M9 15l6 -6"></path><path
               d="M11 6l.463 -.536a5 5 0 0 1 7.071 7.072l-.534 .464"></path><path
               d="M13 18l-.397 .534a5.068 5.068 0 0 1 -7.127 0a4.972 4.972 0 0 1 0 -7.071l.524 -.463"
             ></path></svg
