--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,8 +10,9 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       <Text
         tag="h1"
         variant="displaySM"
-        class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
-      >  Trendspotter
+        class="text-base-900 font-medium 2xl:text-5xl"
+      >
+        Trendspotter
       </Text>
       <Text
         tag="p"
