--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -8,6 +8,7 @@ import Sponsor from "@/components/pricing/Sponsor.astro";
 import Newsletter from "@/components/pricing/Newsletter.astro";
 import Faq from "@/components/infopages/Faq.astro";
 ---
+
 <BaseLayout>
   <section x-data="{duration: 'monthly'}">
     <Wrapper variant="hero">
@@ -16,7 +17,7 @@ import Faq from "@/components/infopages/Faq.astro";
           <Text
             tag="h1"
             variant="displaySM"
-            class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+            class="text-base-900 font-medium 2xl:text-5xl"
           >
             Sponsorship
           </Text>
