--- a/src/pages/tools/tags/index.astro
+++ b/src/pages/tools/tags/index.astro
@@ -11,11 +11,7 @@ const tags = [...new Set(allTools.map((post) => post.data.tags).flat())];
 <BaseLayout>
   <section>
     <Wrapper variant="hero">
-      <Text
-        tag="h1"
-        variant="displaySM"
-        class="text-base-900 tracking-tighter 2xl:text-5xl"
-      >
+      <Text tag="h1" variant="displaySM" class="text-base-900 2xl:text-5xl">
         Explore, and discover new resources.
       </Text>
       <Text
