--- a/src/components/forms/Signup.astro
+++ b/src/components/forms/Signup.astro
@@ -14,7 +14,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       <Text
         tag="h1"
         variant="textXL"
-        class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-3xl"
+        class="text-base-900 font-medium 2xl:text-3xl"
       >
         Welcome to trendspotter
       </Text>
