--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -10,7 +10,7 @@ import SubmitModal from "../forms/SubmitModal.astro";
     <Text
       tag="h1"
       variant="displaySM"
-      class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+      class="text-base-900 font-medium 2xl:text-5xl"
     >
       Welcome to trendspotter
     </Text>
