--- a/src/components/pricing/Spot.astro
+++ b/src/components/pricing/Spot.astro
@@ -9,7 +9,7 @@ import Button from "../fundations/components/Button.astro";
       <Text
         tag="p"
         variant="textLG"
-        class="text-xl text-base-900 font-semibold uppercase"
+        class="text-xl text-base-900 font-semibold"
       >
         Spot
       </Text>
@@ -49,10 +49,7 @@ import Button from "../fundations/components/Button.astro";
         </Button>
       </div>
       <div class="mt-8">
-        <Text
-          variant="textXS"
-          class="text-base-900 font-mono uppercase tracking-wide font-medium"
-        >
+        <Text variant="textXS" class="text-base-900 tracking-wide font-medium">
           includes:
         </Text>
         <ul
