--- a/src/components/system/Buttons.astro
+++ b/src/components/system/Buttons.astro
@@ -9,8 +9,8 @@ import Button from "../fundations/components/Button.astro";
     <Text
       tag="h1"
       variant="displaySM"
-      class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
-      >Buttons 
+      class="text-base-900 font-medium 2xl:text-5xl"
+      >Buttons
     </Text>
     <Text
       tag="p"
@@ -24,7 +24,7 @@ import Button from "../fundations/components/Button.astro";
 <section>
   <Wrapper variant="wide">
     <div
-      class="flex flex-col divide-y divide-base-200 text-base-900 font-medium tracking-tighter"
+      class="flex flex-col divide-y divide-base-200 text-base-900 font-medium"
     >
       <div class="py-4 flex flex-wrap items-center gap-4">
         <Button size="xs" variant="default">Default XS</Button>
