--- a/src/components/system/Colors.astro
+++ b/src/components/system/Colors.astro
@@ -1,7 +1,6 @@
 ---
 import Text from "@/components/fundations/elements/Text.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
-
 ---
 
 <section>
@@ -9,7 +8,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
     <Text
       tag="h1"
       variant="displaySM"
-      class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+      class="text-base-900 font-medium 2xl:text-5xl"
       >Colors
     </Text>
     <Text
@@ -29,7 +28,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         <Text
           tag="h3"
           variant="textSM"
-          class="text-base-900 font-mono uppercase font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
+          class="text-base-900 font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
           >Accent</Text
         >
         <div class="mt-6 flex flex-col gap-2">
@@ -74,7 +73,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         <Text
           tag="h3"
           variant="textSM"
-          class="text-base-900 font-mono uppercase font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
+          class="text-base-900 font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
           >Base</Text
         >
         <div class="mt-6 flex flex-col gap-2">
