--- a/src/components/system/Links.astro
+++ b/src/components/system/Links.astro
@@ -9,7 +9,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
     <Text
       tag="h1"
       variant="displaySM"
-      class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+      class="text-base-900 font-medium 2xl:text-5xl"
       >Links
     </Text>
     <Text
@@ -24,7 +24,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 <section>
   <Wrapper variant="wide">
     <div
-      class="flex flex-col divide-y divide-base-200 text-base-900 font-medium tracking-tighter"
+      class="flex flex-col divide-y divide-base-200 text-base-900 font-medium"
     >
       <div class="py-4 flex flex-wrap items-center gap-4">
         <Link href="#_" size="xs" variant="default">Default XS</Link>
