--- a/src/components/system/Overview.astro
+++ b/src/components/system/Overview.astro
@@ -92,7 +92,7 @@ const pages = [
             <Text
               tag="h1"
               variant="displaySM"
-              class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-3xl"
+              class="text-base-900        font-medium         2xl:text-3xl"
             >
               {section.title}
             </Text>
@@ -112,7 +112,7 @@ const pages = [
                           href={link.href}
                           size="sm"
                           variant="link"
-                          class="flex font-mono uppercase font-medium text-base-500 hover:text-accent-400 "
+                          class="flex        font-medium text-base-500 hover:text-accent-400 "
                         >
                           {link.text}
                         </Link>
