--- a/src/components/system/Typography.astro
+++ b/src/components/system/Typography.astro
@@ -8,7 +8,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
     <Text
       tag="h1"
       variant="displaySM"
-      class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+      class="text-base-900 font-medium 2xl:text-5xl"
       >Typography
     </Text>
     <Text
@@ -23,7 +23,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 <section>
   <Wrapper variant="wide">
     <div
-      class="flex flex-col divide-y divide-base-200 text-base-900 font-medium tracking-tighter"
+      class="flex flex-col divide-y divide-base-200 text-base-900 font-medium"
     >
       <div class="py-4">
         <Text tag="p" variant="textXS"> Text XS </Text>
