--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -21,30 +21,26 @@ const allPosts = allPostsUnsorted.sort(
       <Text
         tag="h1"
         variant="textXL"
-        class="text-base-900 mt-4 lg:text-balance text-center tracking-tighter      2xl:text-3xl">
+        class="text-base-900 mt-4 lg:text-balance text-center 2xl:text-3xl"
+      >
         {frontmatter.title}
       </Text>
       <div
-        class="flex gap-4 flex-col md:flex-row mt-4 items-center justify-between">
+        class="flex gap-4 flex-col md:flex-row mt-4 items-center justify-between"
+      >
         <div class="flex items-center gap-x-3">
           <img
             class="object-cover size-10 rounded-full"
             src={frontmatter.avatar.url}
             alt={frontmatter.avatar.url}
           />
-          <div class="flex flex-col text-base-500   ">
+          <div class="flex flex-col text-base-500">
             <time datetime={frontmatter.pubDate.toString().slice(0, 10)}>
-              <Text
-                tag="span"
-                variant="textXS"
-                class="font-medium uppercase"
+              <Text tag="span" variant="textXS" class="font-medium"
                 >Written on {frontmatter.pubDate.toString().slice(0, 10)}
               </Text>
             </time>
-            <Text
-              tag="span"
-              variant="textXS"
-              class="font-medium uppercase">
+            <Text tag="span" variant="textXS" class="font-medium">
               by {frontmatter.author}
             </Text>
           </div>
@@ -59,7 +55,8 @@ const allPosts = allPostsUnsorted.sort(
                   variant="muted"
                   aria-label={tag}
                   href={`/blog/tags/${tag}`}
-                  class="text-accent-500  font-medium text-xs hover:text-base-900     ">
+                  class="text-accent-500  font-medium text-xs hover:text-base-900     "
+                >
                   {tag}
                 </Link>
               </>
@@ -73,10 +70,7 @@ const allPosts = allPostsUnsorted.sort(
         alt={frontmatter.image.url}
       />
       <div class="text-center">
-        <Text
-          tag="p"
-          variant="textMD"
-          class="mt-4 text-base-500 text-balance   ">
+        <Text tag="p" variant="textMD" class="mt-4 text-base-500 text-balance">
           {frontmatter.description}
         </Text>
       </div>
@@ -89,21 +83,23 @@ const allPosts = allPostsUnsorted.sort(
   </section>
   <SubscribeCta />
   <section>
-    <Wrapper variant="wide"
-    class="py-12">
+    <Wrapper variant="wide" class="py-12">
       <div
-        class="grid grid-cols-1 gap-4 md:grid-cols-2 xl:grid-cols-3 mt-8 group">
+        class="grid grid-cols-1 gap-4 md:grid-cols-2 xl:grid-cols-3 mt-8 group"
+      >
         {
-          allPosts.slice(0, 3).map((post) => (
-            <Insights
-              url={"/blog/posts/" + post.slug}
-              alt={post.data.title}
-              title={post.data.title}
-              image={post.data.image.url}
-              description={post.data.description}
-              pubDate={post.data.pubDate.toString().slice(0, 10)}
-            />
-          ))
+          allPosts
+            .slice(0, 3)
+            .map((post) => (
+              <Insights
+                url={"/blog/posts/" + post.slug}
+                alt={post.data.title}
+                title={post.data.title}
+                image={post.data.image.url}
+                description={post.data.description}
+                pubDate={post.data.pubDate.toString().slice(0, 10)}
+              />
+            ))
         }
       </div>
     </Wrapper>
