--- a/src/pages/blog/home.astro
+++ b/src/pages/blog/home.astro
@@ -24,22 +24,22 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
       <Text
         tag="h1"
         variant="displaySM"
-        class="text-base-900 tracking-tighter      2xl:text-5xl font-mono uppercase font-medium">
+        class="text-base-900 2xl:text-5xl font-medium"
+      >
         Newsroom
       </Text>
       <Text
         tag="p"
         variant="textMD"
-        class="mt-4 text-base-500 text-balance    2xl:text-xl">
+        class="mt-4 text-base-500 text-balance 2xl:text-xl"
+      >
         You will find here the latest trends in the world of web development,
         design, and technology.
       </Text>
     </Wrapper>
   </section>
   <section>
-    <Wrapper
-      variant="wide"
-      class="py-12">
+    <Wrapper variant="wide" class="py-12">
       <div class="flex flex-wrap gap-2">
         {
           sortedTags.map((tag) => (
@@ -49,7 +49,8 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
                 title={tag}
                 variant="muted"
                 aria-label={tag}
-                href={`/blog/tags/${tag}`}>
+                href={`/blog/tags/${tag}`}
+              >
                 {tag}
               </Link>
             </>
@@ -57,18 +58,21 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
         }
       </div>
       <div
-        class="grid grid-cols-1 gap-4 md:grid-cols-2 xl:grid-cols-3 mt-8 group">
+        class="grid grid-cols-1 gap-4 md:grid-cols-2 xl:grid-cols-3 mt-8 group"
+      >
         {
-          allPosts.slice(0, 3).map((post) => (
-            <Insights
-              url={"/blog/posts/" + post.slug}
-              alt={post.data.title}
-              title={post.data.title}
-              image={post.data.image.url}
-              description={post.data.description}
-              pubDate={post.data.pubDate.toString().slice(0, 10)}
-            />
-          ))
+          allPosts
+            .slice(0, 3)
+            .map((post) => (
+              <Insights
+                url={"/blog/posts/" + post.slug}
+                alt={post.data.title}
+                title={post.data.title}
+                image={post.data.image.url}
+                description={post.data.description}
+                pubDate={post.data.pubDate.toString().slice(0, 10)}
+              />
+            ))
         }
       </div>
       <div class="flex flex-col group mt-24">
