--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -27,16 +27,14 @@ const { posts } = Astro.props;
 <BaseLayout pageTitle={tag}>
   <section>
     <Wrapper variant="hero">
-      <Text
-        tag="h1"
-        variant="displaySM"
-        class="text-base-900 tracking-tighter      2xl:text-5xl">
+      <Text tag="h1" variant="displaySM" class="text-base-900 2xl:text-5xl">
         All our blogs tagged with {tag}
       </Text>
       <Text
         tag="p"
         variant="textMD"
-        class="mt-4 text-base-500 text-balance    2xl:text-xl">
+        class="mt-4 text-base-500 text-balance 2xl:text-xl"
+      >
         Read all about {tag} here.
       </Text>
     </Wrapper>
@@ -44,18 +42,21 @@ const { posts } = Astro.props;
   <section>
     <Wrapper variant="wide">
       <div
-        class="grid grid-cols-1 gap-4 md:grid-cols-2 xl:grid-cols-3 mt-8 group">
+        class="grid grid-cols-1 gap-4 md:grid-cols-2 xl:grid-cols-3 mt-8 group"
+      >
         {
-          posts.slice(0, 3).map((post) => (
-            <Insights
-              url={"/blog/posts/" + post.slug}
-              alt={post.data.title}
-              title={post.data.title}
-              image={post.data.image.url}
-              description={post.data.description}
-              pubDate={post.data.pubDate.toString().slice(0, 10)}
-            />
-          ))
+          posts
+            .slice(0, 3)
+            .map((post) => (
+              <Insights
+                url={"/blog/posts/" + post.slug}
+                alt={post.data.title}
+                title={post.data.title}
+                image={post.data.image.url}
+                description={post.data.description}
+                pubDate={post.data.pubDate.toString().slice(0, 10)}
+              />
+            ))
         }
       </div>
       <div class="flex flex-col group mt-12">
