--- a/src/pages/store/home.astro
+++ b/src/pages/store/home.astro
@@ -13,7 +13,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       <Text
         tag="h1"
         variant="displaySM"
-        class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+        class="text-base-900 font-medium 2xl:text-5xl"
       >
         Digital products for your business
       </Text>
@@ -31,10 +31,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
     <Wrapper>
       <section>
         <Wrapper variant="wide" class="py-6">
-          <Text
-            tag="h2"
-            variant="textLG"
-            class="font-medium text-base-900 font-mono uppercase tracking-tighter"
+          <Text tag="h2" variant="textLG" class="font-medium text-base-900"
             >Our products</Text
           >
           <div
@@ -43,7 +40,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
             {
               allProducts.map((post) => (
                 <StoreEntries
-                url={"/store/" + post.slug}
+                  url={"/store/" + post.slug}
                   alt={post.data.title}
                   price={post.data.price}
                   title={post.data.title}
