--- a/src/pages/tools/home.astro
+++ b/src/pages/tools/home.astro
@@ -8,11 +8,8 @@ import Link from "@/components/fundations/components/Link.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 // Retrieve all posts from the "posts" collection, which returns an unsorted array of post objects
 import { getCollection } from "astro:content";
-const alltoolsUnsorted = await getCollection("tools");
-// Sort the posts in descending order by publication date (newest to oldest)
-const alltools = alltoolsUnsorted.sort(
-  (a, b) => new Date(b.data.pubDate) - new Date(a.data.pubDate)
-);
+const alltools = await getCollection("tools");
+
 // Collect all unique tags
 const allTags = [...new Set(alltools.flatMap((post) => post.data.tags || []))];
 const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
@@ -24,7 +21,7 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
       <Text
         tag="h1"
         variant="displaySM"
-        class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+        class="text-base-900 font-medium 2xl:text-5xl"
       >
         Explore all our tools
       </Text>
@@ -39,10 +36,7 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
   </section>
   <section>
     <Wrapper variant="wide" class="py-6">
-      <Text
-        tag="h2"
-        variant="textLG"
-        class="font-medium text-base-900 font-mono uppercase tracking-tighter"
+      <Text tag="h2" variant="textLG" class="font-medium text-base-900"
         >Latest additions</Text
       >
 
