--- a/src/pages/tools/tags/[tag].astro
+++ b/src/pages/tools/tags/[tag].astro
@@ -30,7 +30,7 @@ const { tools } = Astro.props;
       <Text
         tag="h1"
         variant="displaySM"
-        class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-5xl"
+        class="text-base-900 font-medium 2xl:text-5xl"
       >
         All our blogs tagged with {tag}
       </Text>
